@@ -11,7 +11,7 @@
 	<author>
 		<firstname>Andrei</firstname><surname>Zmievski</surname>
 		<affiliation>
-			<address><email>andrei@ispi.net</email></address>
+			<address><email>andrei@php.net</email></address>
 		</affiliation>
 	</author>
 	<edition>Version 1.3.0</edition>
