@@ -4,7 +4,7 @@
  * Project:     Smarty: the PHP compiling template engine
  * File:        Smarty_Compiler.class.php
  * Author:      Monte Ohrt <monte@ispi.net>
- *              Andrei Zmievski <andrei@ispi.net>
+ *              Andrei Zmievski <andrei@php.net>
  *
  * Version:             1.4.0
  * Copyright:           2001 ispi of Lincoln, Inc.
@@ -25,7 +25,7 @@
  *
  * You may contact the authors of Smarty by e-mail at:
  * monte@ispi.net
- * andrei@ispi.net
+ * andrei@php.net
  *
  * Or, write to:
  * Monte Ohrt
